generated-tests/tests/snapshots/ts/test_generated_template_literal_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T3> = `hello ${T3}!`; const value27: Test<'world'> = 'hello world!';

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
      )
    )
    (template_literal_type
      (string_fragment)
      (template_type
        (type_identifier)
      )
      (string_fragment)
    )
  )
  (lexical_declaration
    (variable_declarator
      (identifier value27)
      (type_annotation
        (generic_type
          (type_identifier)
          (type_arguments
            (literal_type
              (string
                (string_fragment)
              )
            )
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 10,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "T3",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 13,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "value27",
            position: Position {
                start_line: 1,
                start_column: 39,
                end_line: 1,
                end_column: 46,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "T3",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 28,
            },
        },
        Usage {
            name: "Test",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 48,
                end_line: 1,
                end_column: 52,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
