generated-tests/tests/snapshots/ts/test_generated_this_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
class TestClass3 { method3(): this { return this; } }

AST:
(program
  (class_declaration
    name: (type_identifier "TestClass3")
    body: (class_body
      (method_definition
        name: (property_identifier "method3")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (this_type)
        )
        body: (statement_block
          (return_statement
            (this "this")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestClass3",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 17,
            },
            definition_type: ClassDefinition,
        },
        Definition {
            name: "method3",
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 27,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "method3",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 27,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
