generated-tests/tests/snapshots/ts/test_generated_tuple_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value29: [string, number] = ['hello', 42];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value29")
      type: (type_annotation
        (tuple_type
          (predefined_type "string")
          (predefined_type "number")
        )
      )
      value: (array
        (string
          (string_fragment)
        )
        (number "42")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value29",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
