generated-tests/tests/snapshots/ts/test_generated_type_alias_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type TestType = string;

AST:
(program
  (type_alias_declaration
    name: (type_identifier "TestType")
    value: (predefined_type "string")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestType",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 14,
            },
            definition_type: TypeDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
